--- a/DOM/dom_methods.html
+++ b/DOM/dom_methods.html
@@ -12,7 +12,8 @@
 		s.style.color='red'
 		let d=document.getElementById('t2');
 		d.innerText='<p> Deepu </p>';
-		d.style.fontSize= "x-large";
+		/*d.style.fontSize= "x-large";*/
+		d.style.fontSize= "500%";
 	</script>
 </body>
 </html>
