--- a/HTML/checkboxvalidation.html
+++ b/HTML/checkboxvalidation.html
@@ -11,6 +11,13 @@
   
     <input type="checkbox" id="checkbox2" class="checkbox-group" name="checkboxGroup" value="option2">
     <label for="checkbox2">Option 2</label><br>
+    <label>Gender:</label>
+    <input type="radio" id="male" name="gender" value="male">
+    <label for="male">Male</label>
+    <input type="radio" id="female" name="gender" value="female">
+    <label for="female">Female</label>
+    <input type="radio" id="other" name="gender" value="other">
+    <label for="other">Other</label><br><br>
   
     <!-- Add more checkboxes here if needed -->
   
